Bug 1284788 - Allow change target of pointer lock when the pointer has been locked in the document. r=smaug

MozReview-Commit-ID: HiPkCPrQQr0

--HG--
extra : rebase_source : ce3826834065242a4e99b82d52ac65ddc205ae61